# domovoy

./: .gitignore  Cargo.toml  README.md
domovoy/: Cargo.toml  build.rs
domovoy/src/: auth.rs  cli.rs  error.rs  lib.rs  main.rs  tui.rs
domovoy/src/tui/: color.rs  dispatcher.rs  keys.rs  server.rs
sdk/: Cargo.toml
sdk/src/: actions.rs  capability.rs  client.rs  device.rs  device_info.rs  error.rs  lib.rs  simple_response.rs  user_info.rs
src/: actions.rs  client.rs  device.rs  device_info.rs  error.rs  group_info.rs  lib.rs  simple_response.rs  user_info.rs
