[package]
name = "domovoy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = "4.6.1"
confy = "2.0.0"
dotenvy = "0.15.7"
ratatui = "0.30.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
sqlx = "0.8.6"
strum = "0.28.0"
thiserror = "2.0.18"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.44"
tracing-appender = "0.2.5"
url = "2.5.8"
