[package]
name = "domovoy"
version = "0.1.0"
edition = "2024"

[dependencies]
yandex-home-sdk = { path = "../sdk" }
clap = { version = "4.6.1", features = ["derive"] }
confy = "2.0.0"
keyring = { version = "3.6.3", features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
] }
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror.workspace = true
tracing.workspace = true
sqlx = { version = "0.8.6", features = ["sqlite"] }
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.102"
serde_json = "1"
rpassword = "7.4.0"
owo-colors = "4.3.0"
indicatif = "0.18.4"
ratatui = { version = "0.30.0", features = ["serde"] }
crossterm = "0.29.0"

[build-dependencies]
dotenvy = "0.15.7"
